[gd_scene load_steps=10 format=4 uid="uid://dsjwfo4harmuc"]

[ext_resource type="Script" path="res://map/map.gd" id="1_250s5"]
[ext_resource type="PackedScene" uid="uid://djvwylagxb45l" path="res://characters/kinematic_characters/player/player.tscn" id="2_e6qxh"]
[ext_resource type="PackedScene" uid="uid://b4yfqgkhh6nk1" path="res://map/rooms/room.tscn" id="3_83x0a"]
[ext_resource type="PackedScene" uid="uid://c8u7t1xjh0eux" path="res://map/door/door.tscn" id="4_bdytv"]
[ext_resource type="PackedScene" uid="uid://cy82o2ooixkrj" path="res://characters/kinematic_characters/enemy/enemy.tscn" id="5_1ddnd"]
[ext_resource type="Theme" uid="uid://bhilpwloom45w" path="res://hud/default.theme" id="6_c23tk"]
[ext_resource type="Script" path="res://hud/hud.gd" id="6_tyfk8"]
[ext_resource type="LabelSettings" uid="uid://dpdq42i46jajy" path="res://hud/font_settings.tres" id="7_q3kwj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v7kh4"]
bg_color = Color(0.631373, 0.258824, 0.2, 1)

[node name="Map" type="Node2D"]
script = ExtResource("1_250s5")

[node name="CoinTutorial" parent="." instance=ExtResource("3_83x0a")]
tile_map_data = PackedByteArray("AAABAAcAAAAEAAAAAAACAAcAAAAEAAAAAAADAAcAAAAEAAAAAAAEAAcAAAAEAAAAAAAFAAcAAAAEAAAAAAAGAAcAAAAEAAAAAAAAAAAAAAAEAAAAAAABAAAAAAAEAAAAAAACAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAFAAAAAAAEAAAAAAAGAAAAAAAEAAAAAAAHAAAAAAAEAAAAAAAHAAEAAAAEAAAAAAAHAAIAAAAEAAAAAAAHAAMAAAAEAAAAAAAHAAQAAAAEAAAAAAAHAAUAAAAEAAAAAAAHAAYAAAAEAAAAAAAAAAEAAAAEAAAAAAAAAAIAAAAEAAAAAAAAAAMAAAAEAAAAAAAAAAUAAAAEAAAAAAAAAAYAAAAEAAAAAAAHAAcAAAAEAAAAAAAAAAcAAAAEAAAAAAADAAUAAQAWAAQAAAADAAQAAQAWAAQAAAADAAIAAQAWAAQAAAADAAEAAQAWAAQAAAACAAEAAQAWAAQAAAABAAEAAQAWAAQAAAABAAIAAQAWAAQAAAABAAMAAQAWAAQAAAABAAQAAQAWAAQAAAABAAUAAQAWAAQAAAABAAYAAQAWAAQAAAACAAYAAQAWAAQAAAACAAUAAQAWAAQAAAACAAQAAQAWAAQAAAACAAMAAQAWAAQAAAACAAIAAQAWAAQAAAADAAYAAQAWAAQAAAAEAAYAAQAWAAQAAAAEAAUAAQAWAAQAAAAEAAQAAQAWAAQAAAAEAAMAAQAWAAQAAAAEAAIAAQAWAAQAAAAEAAEAAQAWAAQAAAAFAAEAAQAWAAQAAAAFAAIAAQAWAAQAAAAFAAMAAQAWAAQAAAAFAAQAAQAWAAQAAAAFAAUAAQAWAAQAAAAFAAYAAQAWAAQAAAAGAAYAAQAWAAQAAAAGAAUAAQAWAAQAAAAGAAQAAQAWAAQAAAAGAAMAAQAWAAQAAAAGAAIAAQAWAAQAAAAGAAEAAQAWAAQAAAA=")

[node name="Door" parent="CoinTutorial" instance=ExtResource("4_bdytv")]
position = Vector2(48, 0)

[node name="Door2" parent="CoinTutorial" node_paths=PackedStringArray("outlet") instance=ExtResource("4_bdytv")]
position = Vector2(0, 64)
outlet = NodePath("../../EnemyTutorial/Door")

[node name="Player" parent="CoinTutorial" instance=ExtResource("2_e6qxh")]
position = Vector2(48, 48)

[node name="EnemyTutorial" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(-128, 0)
tile_map_data = PackedByteArray("AAABAAcAAAAEAAAAAAACAAcAAAAEAAAAAAADAAcAAAAEAAAAAAAEAAcAAAAEAAAAAAAFAAcAAAAEAAAAAAAGAAcAAAAEAAAAAAAAAAAAAAAEAAAAAAACAAAAAAAEAAAAAAADAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAFAAAAAAAEAAAAAAAGAAAAAAAEAAAAAAAHAAAAAAAEAAAAAAAHAAEAAAAEAAAAAAAHAAIAAAAEAAAAAAAHAAMAAAAEAAAAAAAHAAUAAAAEAAAAAAAHAAYAAAAEAAAAAAAAAAEAAAAEAAAAAAAAAAIAAAAEAAAAAAAAAAMAAAAEAAAAAAAAAAQAAAAEAAAAAAAAAAUAAAAEAAAAAAAAAAYAAAAEAAAAAAAHAAcAAAAEAAAAAAAAAAcAAAAEAAAAAAADAAQAAQAWAAQAAAADAAMAAQAWAAQAAAADAAIAAQAWAAQAAAADAAEAAQAWAAQAAAACAAEAAQAWAAQAAAABAAEAAQAWAAQAAAABAAIAAQAWAAQAAAABAAMAAQAWAAQAAAABAAQAAQAWAAQAAAABAAUAAQAWAAQAAAABAAYAAQAWAAQAAAACAAYAAQAWAAQAAAACAAUAAQAWAAQAAAACAAQAAQAWAAQAAAACAAMAAQAWAAQAAAADAAUAAQAWAAQAAAADAAYAAQAWAAQAAAAEAAYAAQAWAAQAAAAEAAUAAQAWAAQAAAAEAAQAAQAWAAQAAAAEAAMAAQAWAAQAAAAEAAIAAQAWAAQAAAAEAAEAAQAWAAQAAAAFAAEAAQAWAAQAAAAFAAIAAQAWAAQAAAAFAAMAAQAWAAQAAAAFAAQAAQAWAAQAAAAFAAUAAQAWAAQAAAAFAAYAAQAWAAQAAAAGAAYAAQAWAAQAAAAGAAUAAQAWAAQAAAAGAAQAAQAWAAQAAAAGAAMAAQAWAAQAAAAGAAIAAQAWAAQAAAAGAAEAAQAWAAQAAAA=")

[node name="Enemy" parent="EnemyTutorial" instance=ExtResource("5_1ddnd")]
position = Vector2(32, 32)

[node name="Door" parent="EnemyTutorial" node_paths=PackedStringArray("outlet") instance=ExtResource("4_bdytv")]
position = Vector2(112, 64)
outlet = NodePath("../../CoinTutorial/Door2")

[node name="Door2" parent="EnemyTutorial" node_paths=PackedStringArray("outlet") instance=ExtResource("4_bdytv")]
position = Vector2(16, 0)
outlet = NodePath("../../Loops/Door")

[node name="Loops" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(-128, -128)
tile_map_data = PackedByteArray("AAACAAcAAAAEAAAAAAADAAcAAAAEAAAAAAAEAAcAAAAEAAAAAAAFAAcAAAAEAAAAAAAGAAcAAAAEAAAAAAAAAAAAAAAEAAAAAAABAAAAAAAEAAAAAAACAAAAAAAEAAAAAAADAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAFAAAAAAAEAAAAAAAGAAAAAAAEAAAAAAAHAAAAAAAEAAAAAAAHAAEAAAAEAAAAAAAHAAIAAAAEAAAAAAAHAAMAAAAEAAAAAAAHAAQAAAAEAAAAAAAHAAUAAAAEAAAAAAAHAAYAAAAEAAAAAAAAAAEAAAAEAAAAAAAAAAIAAAAEAAAAAAAAAAMAAAAEAAAAAAAAAAUAAAAEAAAAAAAAAAYAAAAEAAAAAAAHAAcAAAAEAAAAAAAAAAcAAAAEAAAAAAADAAUAAQAIAAQAAGADAAIAAQAIAAQAAGADAAEAAQAWAAQAAAACAAEAAQAWAAQAAAABAAEAAQAWAAQAAAABAAIAAQAWAAQAAAABAAMAAQAWAAQAAAABAAQAAQAWAAQAAAABAAUAAQAWAAQAAAABAAYAAQAWAAQAAAACAAYAAQAWAAQAAAACAAUAAQAJAAQAAGACAAQAAQAIAAQAADACAAMAAQAIAAQAADACAAIAAQAJAAQAAAADAAYAAQAWAAQAAAAEAAYAAQAWAAQAAAAEAAUAAQAIAAQAAGAEAAIAAQAIAAQAAGAEAAEAAQAWAAQAAAAFAAEAAQAWAAQAAAAFAAMAAQAMAAQAADAGAAYAAQAWAAQAAAAGAAUAAQAWAAQAAAAGAAQAAQAWAAQAAAAGAAMAAQAWAAQAAAAGAAIAAQAWAAQAAAAGAAEAAQAWAAQAAAAFAAIAAQAJAAQAAFAFAAUAAQAMAAQAAFAEAAMAAQAWAAQAAAADAAMAAQAWAAQAAAADAAQAAQAWAAQAAAAEAAQAAQAWAAQAAAAFAAQAAQAWAAQAAAA=")

[node name="Enemy" parent="Loops" instance=ExtResource("5_1ddnd")]
position = Vector2(80, 96)

[node name="Door" parent="Loops" node_paths=PackedStringArray("outlet") instance=ExtResource("4_bdytv")]
position = Vector2(16, 112)
outlet = NodePath("../../EnemyTutorial/Door2")

[node name="Door2" parent="Loops" node_paths=PackedStringArray("outlet") instance=ExtResource("4_bdytv")]
position = Vector2(0, 64)
outlet = NodePath("../../Hall/Door")

[node name="Hall" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(-256, -128)
tile_map_data = PackedByteArray("AAABAAcAAAAEAAAAAAACAAcAAAAEAAAAAAADAAcAAAAEAAAAAAAEAAcAAAAEAAAAAAAFAAcAAAAEAAAAAAAGAAcAAAAEAAAAAAAAAAAAAAAEAAAAAAABAAAAAAAEAAAAAAACAAAAAAAEAAAAAAADAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAFAAAAAAAEAAAAAAAGAAAAAAAEAAAAAAAHAAAAAAAEAAAAAAAHAAEAAAAEAAAAAAAHAAIAAAAEAAAAAAAHAAMAAAAEAAAAAAAHAAUAAAAEAAAAAAAHAAYAAAAEAAAAAAAAAAEAAAAEAAAAAAAAAAIAAAAEAAAAAAAAAAQAAAAEAAAAAAAAAAYAAAAEAAAAAAAHAAcAAAAEAAAAAAAAAAcAAAAEAAAAAAAEAAMAAAAEAAAAAAAFAAMAAAAEAAAAAAAGAAMAAAAEAAAAAAAEAAUAAAAEAAAAAAAFAAUAAAAEAAAAAAAGAAUAAAAEAAAAAAACAAYAAAAEAAAAAAACAAUAAAAEAAAAAAADAAUAAAAEAAAAAAACAAIAAAAEAAAAAAACAAMAAAAEAAAAAAADAAMAAAAEAAAAAAABAAIAAAAEAAAAAAABAAYAAAAEAAAAAAAEAAIAAAAEAAAAAAADAAIAAAAEAAAAAAAFAAIAAAAEAAAAAAAGAAIAAAAEAAAAAAAFAAYAAAAEAAAAAAAEAAYAAAAEAAAAAAADAAYAAAAEAAAAAAAGAAYAAAAEAAAAAAABAAEAAAAEAAAAAAACAAEAAAAEAAAAAAADAAEAAAAEAAAAAAAEAAEAAAAEAAAAAAAFAAEAAAAEAAAAAAAGAAEAAAAEAAAAAAA=")

[node name="Door" parent="Hall" node_paths=PackedStringArray("outlet") instance=ExtResource("4_bdytv")]
position = Vector2(112, 64)
outlet = NodePath("../../Loops/Door2")

[node name="Door2" parent="Hall" node_paths=PackedStringArray("outlet") instance=ExtResource("4_bdytv")]
position = Vector2(0, 48)
outlet = NodePath("../../Hub/Door")

[node name="Door3" parent="Hall" node_paths=PackedStringArray("outlet") instance=ExtResource("4_bdytv")]
position = Vector2(0, 80)
outlet = NodePath("../../Hub/Door2")

[node name="Hub" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(-384, -128)
tile_map_data = PackedByteArray("AAABAAcAAAAEAAAAAAADAAcAAAAEAAAAAAAFAAcAAAAEAAAAAAAGAAcAAAAEAAAAAAAAAAAAAAAEAAAAAAABAAAAAAAEAAAAAAADAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAFAAAAAAAEAAAAAAAHAAAAAAAEAAAAAAAHAAEAAAAEAAAAAAAHAAIAAAAEAAAAAAAHAAQAAAAEAAAAAAAHAAYAAAAEAAAAAAAAAAIAAAAEAAAAAAAAAAMAAAAEAAAAAAAAAAUAAAAEAAAAAAAHAAcAAAAEAAAAAAAAAAcAAAAEAAAAAAABAAUAAAAEAAAAAAACAAUAAAAEAAAAAAADAAUAAAAEAAAAAAADAAIAAAAEAAAAAAABAAMAAAAEAAAAAAACAAMAAAAEAAAAAAADAAMAAAAEAAAAAAAGAAQAAAAEAAAAAAAGAAIAAAAEAAAAAAAFAAIAAAAEAAAAAAAGAAYAAAAEAAAAAAAFAAYAAAAEAAAAAAAFAAQAAAAEAAAAAAADAAYAAAAEAAAAAAABAAIAAAAEAAAAAAACAAIAAAAEAAAAAAADAAEAAAAEAAAAAAAGAAEAAQApAAQAAAAFAAEAAQApAAQAAAAEAAEAAQApAAQAAAAEAAIAAQApAAQAAAAEAAMAAQApAAQAAAAFAAMAAQApAAQAAAAGAAMAAQApAAQAAAAEAAQAAQApAAQAAAAEAAYAAQApAAQAAAAEAAUAAQApAAQAAAAFAAUAAQApAAQAAAAGAAUAAQApAAQAAAADAAQAAQApAAQAAAACAAQAAQApAAQAAAABAAQAAQApAAQAAAABAAYAAQApAAQAAAACAAYAAQApAAQAAAABAAEAAQApAAQAAAACAAEAAQApAAQAAAA=")

[node name="Enemy" parent="Hub" instance=ExtResource("5_1ddnd")]
position = Vector2(64, 64)

[node name="Door" parent="Hub" node_paths=PackedStringArray("outlet") instance=ExtResource("4_bdytv")]
position = Vector2(112, 48)
outlet = NodePath("../../Hall/Door2")

[node name="Door2" parent="Hub" node_paths=PackedStringArray("outlet") instance=ExtResource("4_bdytv")]
position = Vector2(112, 80)
outlet = NodePath("../../Hall/Door3")

[node name="Room4" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(-512, -128)
tile_map_data = PackedByteArray("AAABAAcAAAAEAAAAAAACAAcAAAAEAAAAAAADAAcAAAAEAAAAAAAEAAcAAAAEAAAAAAAFAAcAAAAEAAAAAAAGAAcAAAAEAAAAAAAAAAAAAAAEAAAAAAABAAAAAAAEAAAAAAACAAAAAAAEAAAAAAADAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAFAAAAAAAEAAAAAAAGAAAAAAAEAAAAAAAHAAAAAAAEAAAAAAAHAAEAAAAEAAAAAAAHAAIAAAAEAAAAAAAHAAMAAAAEAAAAAAAHAAQAAAAEAAAAAAAHAAUAAAAEAAAAAAAAAAEAAAAEAAAAAAAAAAMAAAAEAAAAAAAAAAQAAAAEAAAAAAAAAAUAAAAEAAAAAAAHAAcAAAAEAAAAAAAAAAcAAAAEAAAAAAAGAAUAAAAEAAAAAAAFAAUAAAAEAAAAAAAEAAUAAAAEAAAAAAADAAUAAAAEAAAAAAACAAUAAAAEAAAAAAABAAUAAAAEAAAAAAA=")

[node name="Room5" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(-640, -176)
tile_map_data = PackedByteArray("AAABAAcAAAAEAAAAAAACAAcAAAAEAAAAAAADAAcAAAAEAAAAAAAEAAcAAAAEAAAAAAAFAAcAAAAEAAAAAAAGAAcAAAAEAAAAAAAAAAAAAAAEAAAAAAABAAAAAAAEAAAAAAACAAAAAAAEAAAAAAADAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAFAAAAAAAEAAAAAAAGAAAAAAAEAAAAAAAHAAAAAAAEAAAAAAAHAAEAAAAEAAAAAAAHAAIAAAAEAAAAAAAHAAMAAAAEAAAAAAAHAAQAAAAEAAAAAAAHAAYAAAAEAAAAAAAAAAEAAAAEAAAAAAAAAAIAAAAEAAAAAAAAAAMAAAAEAAAAAAAAAAQAAAAEAAAAAAAAAAUAAAAEAAAAAAAAAAYAAAAEAAAAAAAHAAcAAAAEAAAAAAAAAAcAAAAEAAAAAAA=")

[node name="Room6" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(-640, -48)
tile_map_data = PackedByteArray("AAABAAcAAAAEAAAAAAACAAcAAAAEAAAAAAADAAcAAAAEAAAAAAAEAAcAAAAEAAAAAAAFAAcAAAAEAAAAAAAGAAcAAAAEAAAAAAAAAAAAAAAEAAAAAAABAAAAAAAEAAAAAAACAAAAAAAEAAAAAAADAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAFAAAAAAAEAAAAAAAGAAAAAAAEAAAAAAAHAAAAAAAEAAAAAAAHAAIAAAAEAAAAAAAHAAMAAAAEAAAAAAAHAAQAAAAEAAAAAAAHAAUAAAAEAAAAAAAHAAYAAAAEAAAAAAAAAAEAAAAEAAAAAAAAAAIAAAAEAAAAAAAAAAMAAAAEAAAAAAAAAAQAAAAEAAAAAAAAAAUAAAAEAAAAAAAAAAYAAAAEAAAAAAAHAAcAAAAEAAAAAAAAAAcAAAAEAAAAAAA=")

[node name="Room7" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(-384, 0)
tile_map_data = PackedByteArray("AAABAAcAAAAEAAAAAAADAAcAAAAEAAAAAAAEAAcAAAAEAAAAAAAFAAcAAAAEAAAAAAAGAAcAAAAEAAAAAAAAAAAAAAAEAAAAAAACAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAFAAAAAAAEAAAAAAAGAAAAAAAEAAAAAAAHAAAAAAAEAAAAAAAHAAEAAAAEAAAAAAAHAAIAAAAEAAAAAAAHAAMAAAAEAAAAAAAHAAQAAAAEAAAAAAAHAAUAAAAEAAAAAAAHAAYAAAAEAAAAAAAAAAEAAAAEAAAAAAAAAAIAAAAEAAAAAAAAAAMAAAAEAAAAAAAAAAUAAAAEAAAAAAAAAAYAAAAEAAAAAAAHAAcAAAAEAAAAAAAAAAcAAAAEAAAAAAACAAEAAAAEAAAAAAACAAIAAAAEAAAAAAADAAIAAAAEAAAAAAAEAAIAAAAEAAAAAAAEAAMAAAAEAAAAAAAEAAQAAAAEAAAAAAAEAAUAAAAEAAAAAAAEAAYAAAAEAAAAAAA=")

[node name="Room8" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(-384, -256)

[node name="Room9" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(-256, -256)

[node name="Room10" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(-128, -256)

[node name="Room11" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(0, -256)

[node name="Room12" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(128, -256)

[node name="Room13" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(128, -128)

[node name="Room14" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(128, 0)

[node name="Room15" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(128, 128)

[node name="Room16" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(0, 128)

[node name="Room17" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(-128, 128)

[node name="Room18" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(-256, 128)

[node name="Room19" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(-256, 0)

[node name="Wizard\'sVault" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(0, -128)
tile_map_data = PackedByteArray("AAABAAcAAAAEAAAAAAACAAcAAAAEAAAAAAADAAcAAAAEAAAAAAAEAAcAAAAEAAAAAAAFAAcAAAAEAAAAAAAGAAcAAAAEAAAAAAAAAAAAAAAEAAAAAAABAAAAAAAEAAAAAAACAAAAAAAEAAAAAAADAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAFAAAAAAAEAAAAAAAGAAAAAAAEAAAAAAAHAAAAAAAEAAAAAAAHAAEAAAAEAAAAAAAHAAIAAAAEAAAAAAAHAAMAAAAEAAAAAAAHAAQAAAAEAAAAAAAHAAUAAAAEAAAAAAAHAAYAAAAEAAAAAAAAAAEAAAAEAAAAAAAAAAIAAAAEAAAAAAAAAAMAAAAEAAAAAAAAAAQAAAAEAAAAAAAAAAUAAAAEAAAAAAAAAAYAAAAEAAAAAAAHAAcAAAAEAAAAAAAAAAcAAAAEAAAAAAAGAAYAAQAXAAQAAAAGAAUAAQAXAAQAAAAGAAQAAQAXAAQAAAAGAAMAAQAXAAQAAAAGAAIAAQAXAAQAAAAGAAEAAQAXAAQAAAAFAAEAAQAXAAQAAAAEAAEAAQAXAAQAAAADAAEAAQAXAAQAAAACAAEAAQAXAAQAAAABAAEAAQAXAAQAAAABAAIAAQAXAAQAAAABAAMAAQAXAAQAAAABAAQAAQAXAAQAAAABAAUAAQAXAAQAAAABAAYAAQAXAAQAAAACAAYAAQAXAAQAAAADAAYAAQAXAAQAAAAEAAYAAQAXAAQAAAAFAAYAAQAXAAQAAAAFAAUAAQAXAAQAAAAFAAQAAQAXAAQAAAAFAAMAAQAXAAQAAAAFAAIAAQAXAAQAAAAEAAIAAQAXAAQAAAADAAIAAQAXAAQAAAACAAIAAQAXAAQAAAACAAMAAQAXAAQAAAACAAQAAQAXAAQAAAACAAUAAQAXAAQAAAADAAUAAQAXAAQAAAAEAAUAAQAXAAQAAAAEAAQAAQAXAAQAAAAEAAMAAQAXAAQAAAADAAMAAQAXAAQAAAADAAQAAQAXAAQAAAA=")

[node name="TestRoom" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(384, 128)
tile_map_data = PackedByteArray("AAABAAcAAAAEAAAAAAACAAcAAAAEAAAAAAADAAcAAAAEAAAAAAAFAAcAAAAEAAAAAAAGAAcAAAAEAAAAAAAAAAAAAAAEAAAAAAABAAAAAAAEAAAAAAACAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAFAAAAAAAEAAAAAAAGAAAAAAAEAAAAAAAHAAAAAAAEAAAAAAAHAAEAAAAEAAAAAAAHAAIAAAAEAAAAAAAHAAQAAAAEAAAAAAAHAAUAAAAEAAAAAAAHAAYAAAAEAAAAAAAAAAEAAAAEAAAAAAAAAAIAAAAEAAAAAAAAAAMAAAAEAAAAAAAAAAQAAAAEAAAAAAAAAAUAAAAEAAAAAAAAAAYAAAAEAAAAAAAHAAcAAAAEAAAAAAAAAAcAAAAEAAAAAAACAAUAAAAEAAAAAAADAAUAAAAEAAAAAAAEAAUAAAAEAAAAAAAFAAUAAAAEAAAAAAACAAIAAAAEAAAAAAADAAIAAAAEAAAAAAAEAAIAAAAEAAAAAAAFAAIAAAAEAAAAAAAFAAMAAQAWAAQAAAAEAAMAAQAWAAQAAAADAAMAAQAWAAQAAAACAAMAAQAWAAQAAAABAAMAAQAWAAQAAAABAAIAAQAWAAQAAAABAAEAAQAWAAQAAAACAAEAAQAWAAQAAAADAAEAAQAWAAQAAAAEAAEAAQAWAAQAAAAFAAEAAQAWAAQAAAAGAAEAAQAWAAQAAAAGAAIAAQAWAAQAAAAGAAMAAQAWAAQAAAAGAAQAAQAWAAQAAAAFAAQAAQAWAAQAAAAEAAQAAQAWAAQAAAACAAQAAQAWAAQAAAABAAQAAQAWAAQAAAABAAUAAQAWAAQAAAABAAYAAQAWAAQAAAACAAYAAQAWAAQAAAADAAYAAQAWAAQAAAAEAAYAAQAWAAQAAAAFAAYAAQAWAAQAAAAGAAYAAQAWAAQAAAAGAAUAAQAWAAQAAAA=")

[node name="Door" parent="TestRoom" node_paths=PackedStringArray("outlet") instance=ExtResource("4_bdytv")]
position = Vector2(48, 0)
outlet = NodePath("../../Room3/Door")

[node name="Door2" parent="TestRoom" node_paths=PackedStringArray("outlet") instance=ExtResource("4_bdytv")]
position = Vector2(113, 48)
outlet = NodePath("../../Room/Door")

[node name="Door3" parent="TestRoom" node_paths=PackedStringArray("outlet") instance=ExtResource("4_bdytv")]
position = Vector2(64, 112)
outlet = NodePath("../../Room/Door3")

[node name="Enemy" parent="TestRoom" instance=ExtResource("5_1ddnd")]
position = Vector2(48, 0)

[node name="Enemy2" parent="TestRoom" instance=ExtResource("5_1ddnd")]
position = Vector2(112, 48)

[node name="Enemy3" parent="TestRoom" instance=ExtResource("5_1ddnd")]
position = Vector2(64, 112)

[node name="Room" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(512, 128)
tile_map_data = PackedByteArray("AAABAAcAAAAEAAAAAAACAAcAAAAEAAAAAAADAAcAAAAEAAAAAAAEAAcAAAAEAAAAAAAFAAcAAAAEAAAAAAAGAAcAAAAEAAAAAAAAAAAAAAAEAAAAAAABAAAAAAAEAAAAAAACAAAAAAAEAAAAAAADAAAAAAAEAAAAAAAFAAAAAAAEAAAAAAAGAAAAAAAEAAAAAAAHAAAAAAAEAAAAAAAHAAEAAAAEAAAAAAAHAAIAAAAEAAAAAAAHAAQAAAAEAAAAAAAHAAUAAAAEAAAAAAAHAAYAAAAEAAAAAAAAAAEAAAAEAAAAAAAAAAIAAAAEAAAAAAAAAAQAAAAEAAAAAAAAAAUAAAAEAAAAAAAAAAYAAAAEAAAAAAAHAAcAAAAEAAAAAAAAAAcAAAAEAAAAAAACAAIAAAAEAAAAAAADAAIAAAAEAAAAAAA=")

[node name="Door" parent="Room" node_paths=PackedStringArray("outlet") instance=ExtResource("4_bdytv")]
position = Vector2(0, 48)
outlet = NodePath("../../TestRoom/Door2")

[node name="Door2" parent="Room" node_paths=PackedStringArray("outlet") instance=ExtResource("4_bdytv")]
position = Vector2(112, 48)
outlet = NodePath("../../Room2/Door")

[node name="Door3" parent="Room" node_paths=PackedStringArray("outlet") instance=ExtResource("4_bdytv")]
position = Vector2(64, 0)
outlet = NodePath("../../TestRoom/Door3")

[node name="Enemy" parent="Room" instance=ExtResource("5_1ddnd")]
position = Vector2(16, 16)

[node name="Room2" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(640, 128)
tile_map_data = PackedByteArray("AAABAAcAAAAEAAAAAAACAAcAAAAEAAAAAAADAAcAAAAEAAAAAAAEAAcAAAAEAAAAAAAFAAcAAAAEAAAAAAAGAAcAAAAEAAAAAAAAAAAAAAAEAAAAAAABAAAAAAAEAAAAAAACAAAAAAAEAAAAAAADAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAFAAAAAAAEAAAAAAAGAAAAAAAEAAAAAAAHAAAAAAAEAAAAAAAHAAEAAAAEAAAAAAAHAAIAAAAEAAAAAAAHAAMAAAAEAAAAAAAHAAQAAAAEAAAAAAAHAAUAAAAEAAAAAAAHAAYAAAAEAAAAAAAAAAEAAAAEAAAAAAAAAAIAAAAEAAAAAAAAAAQAAAAEAAAAAAAAAAUAAAAEAAAAAAAAAAYAAAAEAAAAAAAHAAcAAAAEAAAAAAAAAAcAAAAEAAAAAAA=")

[node name="Door" parent="Room2" node_paths=PackedStringArray("outlet") instance=ExtResource("4_bdytv")]
position = Vector2(0, 48)
outlet = NodePath("../../Room/Door2")

[node name="Room3" parent="." instance=ExtResource("3_83x0a")]
position = Vector2(384, 0)
tile_map_data = PackedByteArray("AAABAAcAAAAEAAAAAAACAAcAAAAEAAAAAAAEAAcAAAAEAAAAAAAFAAcAAAAEAAAAAAAGAAcAAAAEAAAAAAAAAAAAAAAEAAAAAAABAAAAAAAEAAAAAAACAAAAAAAEAAAAAAADAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAFAAAAAAAEAAAAAAAGAAAAAAAEAAAAAAAHAAAAAAAEAAAAAAAHAAEAAAAEAAAAAAAHAAIAAAAEAAAAAAAHAAMAAAAEAAAAAAAHAAQAAAAEAAAAAAAHAAUAAAAEAAAAAAAHAAYAAAAEAAAAAAAAAAEAAAAEAAAAAAAAAAIAAAAEAAAAAAAAAAMAAAAEAAAAAAAAAAQAAAAEAAAAAAAAAAUAAAAEAAAAAAAAAAYAAAAEAAAAAAAHAAcAAAAEAAAAAAAAAAcAAAAEAAAAAAABAAYAAAAEAAAAAAAGAAYAAAAEAAAAAAABAAEAAAAEAAAAAAAGAAEAAAAEAAAAAAABAAIAAQAWAAQAAAABAAMAAQAWAAQAAAACAAMAAQAWAAQAAAACAAQAAQAWAAQAAAABAAQAAQAWAAQAAAABAAUAAQAWAAQAAAACAAUAAQAWAAQAAAACAAYAAQAWAAQAAAADAAYAAQAWAAQAAAAEAAYAAQAWAAQAAAAFAAYAAQAWAAQAAAAFAAUAAQAWAAQAAAAEAAUAAQAWAAQAAAADAAUAAQAWAAQAAAADAAQAAQAWAAQAAAADAAMAAQAWAAQAAAACAAIAAQAWAAQAAAACAAEAAQAWAAQAAAADAAEAAQAWAAQAAAAEAAEAAQAWAAQAAAAFAAEAAQAWAAQAAAAFAAIAAQAWAAQAAAAGAAIAAQAWAAQAAAAGAAMAAQAWAAQAAAAGAAQAAQAWAAQAAAAGAAUAAQAWAAQAAAAFAAQAAQAWAAQAAAAFAAMAAQAWAAQAAAAEAAIAAQAWAAQAAAADAAIAAQAWAAQAAAAEAAMAAQAWAAQAAAAEAAQAAQAWAAQAAAA=")

[node name="Door" parent="Room3" node_paths=PackedStringArray("outlet") instance=ExtResource("4_bdytv")]
position = Vector2(48, 112)
outlet = NodePath("../../TestRoom/Door")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("6_tyfk8")

[node name="Panel" type="ColorRect" parent="HUD"]
anchors_preset = -1
anchor_top = 0.889
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.0160065
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_c23tk")
color = Color(0, 0, 0, 1)

[node name="GoldBarDamage" type="ProgressBar" parent="HUD/Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
offset_top = 1.0
offset_right = 64.0
offset_bottom = 9.0
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_styles/fill = SubResource("StyleBoxFlat_v7kh4")
max_value = 35.0
show_percentage = false

[node name="RoomGoldBar" type="ProgressBar" parent="HUD/Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
offset_top = 1.0
offset_right = 64.0
offset_bottom = 9.0
size_flags_horizontal = 0
size_flags_vertical = 3
max_value = 35.0
show_percentage = false

[node name="RoomGoldCounter" type="Label" parent="HUD/Panel/RoomGoldBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "$ 12/35"
label_settings = ExtResource("7_q3kwj")
vertical_alignment = 1

[node name="TotalGoldCounter" type="Label" parent="HUD/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 72.0
offset_right = 128.0
offset_bottom = 16.0
text = "Total: $14705"
label_settings = ExtResource("7_q3kwj")
horizontal_alignment = 2

[connection signal="died" from="CoinTutorial/Player" to="HUD" method="reset"]
[connection signal="gold_collected" from="CoinTutorial/Player" to="HUD" method="set_gold"]
